added circles widget

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,5 +4,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
+<view
+    class="hu.vsza.android.cmp.ColourCircles"
+    id="@+id/circles"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+/>
 </LinearLayout>
 
