--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,7 +6,7 @@
     >
 <view
     class="hu.vsza.android.cmp.ColourCircles"
-    id="@+id/circles"
+    android:id="@+id/circles"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
 />
