--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,7 +8,7 @@
     class="hu.vsza.android.cmp.ColourCircles"
     android:id="@+id/circles"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-/>
+    android:layout_height="wrap_content"
+	/>
 </LinearLayout>
 
