--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,5 +10,72 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
 	/>
+<LinearLayout
+	android:orientation="horizontal"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:paddingTop="30dp"
+	>
+    <TextView
+		android:layout_width="wrap_content"
+		android:layout_height="fill_parent"
+		android:text="R"
+		android:gravity="center|center_vertical"
+		android:paddingLeft="10dp"
+		android:textStyle="bold"
+		/>
+	<SeekBar
+	   android:layout_width="fill_parent"
+	   android:layout_height="wrap_content"
+	   android:layout_margin="10px"
+	   android:id="@+id/seekbar_red"
+	   android:max="255"
+	   android:progress="255"
+	   />
+   </LinearLayout>
+<LinearLayout
+	android:orientation="horizontal"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	>
+    <TextView
+		android:layout_width="wrap_content"
+		android:layout_height="fill_parent"
+		android:text="G"
+		android:gravity="center|center_vertical"
+		android:paddingLeft="10dp"
+		android:textStyle="bold"
+		/>
+	<SeekBar
+	   android:layout_width="fill_parent"
+	   android:layout_height="wrap_content"
+	   android:layout_margin="10px"
+	   android:id="@+id/seekbar_green"
+	   android:max="255"
+	   android:progress="0"
+	   />
+	   </LinearLayout>
+<LinearLayout
+	android:orientation="horizontal"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	>
+    <TextView
+		android:layout_width="wrap_content"
+		android:layout_height="fill_parent"
+		android:text="B"
+		android:gravity="center|center_vertical"
+		android:paddingLeft="10dp"
+		android:textStyle="bold"
+		/>
+	<SeekBar
+	   android:layout_width="fill_parent"
+	   android:layout_height="wrap_content"
+	   android:layout_margin="10px"
+	   android:id="@+id/seekbar_blue"
+	   android:max="255"
+	   android:progress="0"
+	   />
+   </LinearLayout>
 </LinearLayout>
 
